Added annotations to repo
Signed-off-by: Mamadou8Bah <mbah18791@gmail.com>